src/components/checkbox/checkbox.scss
@import '../../style/internal/mdc-variables';

@import '@limetech/mdc-form-field/mdc-form-field';
@import '@limetech/mdc-checkbox/mdc-checkbox';

.mdc-form-field {
    display: flex;

    .mdc-checkbox {
        @include mdc-checkbox-ink-color(primary);
        @include mdc-checkbox-container-colors(
            secondary,
            on-primary,
            secondary,
            on-primary
        );

        &.mdc-checkbox--invalid {
            .mdc-checkbox__native-control:enabled:not(:checked):not(:indeterminate)
                ~ .mdc-checkbox__background {
                border-color: $mdc-theme-error;
            }
        }
    }

    label {
        &.mdc-checkbox--disabled {
            opacity: 0.37;
        }

        &.mdc-checkbox--required::after {
            margin-left: 0.0625rem;
            content: '*';
        }

        &.mdc-checkbox--invalid {
            color: $mdc-theme-error;
        }
    }
}

